[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/GameResult_VicDefPanel/Assets/GreenTriangle_11x11.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/GameResult_VicDefPanel/Assets/BlackLine_4x4.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/GameResult_VicDefPanel/Assets/GreenLine_4x4.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameHUDRelated/GameResult_VicDefPanel/Assets/RedTriangle_11x11.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/GameResult_VicDefPanel/Assets/RedLine_4x4.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/GameResult_VicDefPanel/GameResultPanel.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="GameResultPanel" type="MarginContainer"]
margin_right = 153.0
margin_bottom = 105.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 175.0
margin_bottom = 148.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 22.0
margin_bottom = 148.0
mouse_filter = 2

[node name="LeftBorder" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 22.0
margin_bottom = 148.0
mouse_filter = 2

[node name="VicLeftBorder" type="HBoxContainer" parent="HBoxContainer/MarginContainer/LeftBorder"]
margin_right = 22.0
margin_bottom = 148.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/LeftBorder/VicLeftBorder"]
margin_right = 11.0
margin_bottom = 148.0
custom_constants/margin_top = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer/LeftBorder/VicLeftBorder/MarginContainer"]
margin_top = 20.0
margin_right = 11.0
margin_bottom = 148.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/VicLeftBorder/MarginContainer/VBoxContainer2"]
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 2 )
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/VicLeftBorder/MarginContainer/VBoxContainer2"]
margin_top = 11.0
margin_right = 11.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/LeftBorder/VicLeftBorder"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 148.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/VicLeftBorder/VBoxContainer"]
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/VicLeftBorder/VBoxContainer"]
margin_top = 11.0
margin_right = 11.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 2

[node name="DefLeftBorder" type="HBoxContainer" parent="HBoxContainer/MarginContainer/LeftBorder"]
visible = false
margin_right = 22.0
margin_bottom = 148.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/LeftBorder/DefLeftBorder"]
margin_right = 11.0
margin_bottom = 105.0
custom_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer/LeftBorder/DefLeftBorder/MarginContainer"]
margin_right = 11.0
margin_bottom = 85.0
custom_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/DefLeftBorder/MarginContainer/VBoxContainer2"]
margin_right = 11.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/DefLeftBorder/MarginContainer/VBoxContainer2"]
margin_top = 74.0
margin_right = 11.0
margin_bottom = 85.0
texture = ExtResource( 6 )
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/LeftBorder/DefLeftBorder"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 105.0
custom_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/DefLeftBorder/VBoxContainer"]
margin_right = 11.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/LeftBorder/DefLeftBorder/VBoxContainer"]
margin_top = 94.0
margin_right = 11.0
margin_bottom = 105.0
texture = ExtResource( 6 )

[node name="MiddleContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 22.0
margin_right = 153.0
margin_bottom = 148.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="Background" type="TextureRect" parent="HBoxContainer/MiddleContainer"]
margin_top = 20.0
margin_right = 131.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContentContainer" type="MarginContainer" parent="HBoxContainer/MiddleContainer"]
margin_top = 20.0
margin_right = 131.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MiddleContainer/ContentContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 111.0
margin_bottom = 88.0
mouse_filter = 2
custom_constants/separation = 12

[node name="GameResultLabel" type="Label" parent="HBoxContainer/MiddleContainer/ContentContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "Victory"
align = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="HBoxContainer/MiddleContainer/ContentContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 91.0
margin_bottom = 68.0
mouse_filter = 2
custom_constants/separation = 15

[node name="ViewButton" parent="HBoxContainer/MiddleContainer/ContentContainer/VBoxContainer/ButtonsContainer" instance=ExtResource( 5 )]
margin_left = 20.0
margin_right = 70.0
margin_bottom = 31.0
size_flags_horizontal = 6
text_for_label = "Continue"

[node name="MainMenuButton" parent="HBoxContainer/MiddleContainer/ContentContainer/VBoxContainer/ButtonsContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 65.0
margin_right = 115.0
margin_bottom = 31.0
mouse_filter = 0
text_for_label = "Main Menu"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 153.0
margin_right = 175.0
margin_bottom = 148.0
mouse_filter = 2

[node name="RightBorder" type="MarginContainer" parent="HBoxContainer/MarginContainer2"]
margin_right = 22.0
margin_bottom = 148.0
mouse_filter = 2

[node name="VicRightBorder" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/RightBorder"]
margin_right = 22.0
margin_bottom = 148.0
mouse_filter = 2
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/RightBorder/VicRightBorder"]
margin_right = 11.0
margin_bottom = 148.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/VicRightBorder/VBoxContainer"]
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 2 )
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/VicRightBorder/VBoxContainer"]
margin_top = 11.0
margin_right = 11.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/RightBorder/VicRightBorder"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 148.0
custom_constants/margin_top = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/RightBorder/VicRightBorder/MarginContainer"]
margin_top = 20.0
margin_right = 11.0
margin_bottom = 148.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/VicRightBorder/MarginContainer/VBoxContainer2"]
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/VicRightBorder/MarginContainer/VBoxContainer2"]
margin_top = 11.0
margin_right = 11.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 2

[node name="DefRightBorder" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/RightBorder"]
visible = false
margin_right = 22.0
margin_bottom = 148.0
mouse_filter = 2
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/RightBorder/DefRightBorder"]
margin_right = 11.0
margin_bottom = 105.0
custom_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/DefRightBorder/VBoxContainer"]
margin_right = 11.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/DefRightBorder/VBoxContainer"]
margin_top = 94.0
margin_right = 11.0
margin_bottom = 105.0
texture = ExtResource( 6 )
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/RightBorder/DefRightBorder"]
margin_left = 11.0
margin_right = 22.0
margin_bottom = 105.0
custom_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/RightBorder/DefRightBorder/MarginContainer"]
margin_right = 11.0
margin_bottom = 85.0
custom_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/DefRightBorder/MarginContainer/VBoxContainer2"]
margin_right = 11.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/RightBorder/DefRightBorder/MarginContainer/VBoxContainer2"]
margin_top = 74.0
margin_right = 11.0
margin_bottom = 85.0
texture = ExtResource( 6 )
